--- a/css/main.css
+++ b/css/main.css
@@ -144,9 +144,6 @@ button {
 /* content */
 
 /* result list */
-.information{
-    
-}
 .information-list {
     display: flex;
     flex-wrap: wrap;
@@ -225,10 +222,10 @@ button {
 }
 .product-type__more-link{
     display: flex;
-    padding: 10px 0px;
+    align-items: center;
 }
 .more-link__arrow{
-    padding: 2px 10px 0px 10px;
+    padding: 10px 10px 0px 0px;
 }
 
 /* brands */
@@ -249,9 +246,6 @@ button {
     height: 55px;
 }
 /* footer banner */
-.footer-banner{
-
-}
 /* footer */
 .footer-up{
     border-bottom: 1px solid #DDDDDD;
@@ -332,19 +326,112 @@ button {
 }
 @media (max-width : 410px) {
     .navigation{
-        display: block;
+        justify-content: end;
+    }
+    .header-up{
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        z-index: 50;
+    }
+    .header-up::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #FFFFFF;
     }
     .header-up-body{
+        position: relative;
+        z-index: 2;
         justify-content: center;
+        top: 0;
+        left: 0;
+        align-items: center;
+    }
+    .header{
+        position: fixed;
+        width: 100%;
+        top: 40px;
+        left: 0;
+        z-index: 1;
+    }
+    .header-wrapper{
+        display: block;
+    }
+    /* burger */
+    .header__burger{
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 30px;
+        z-index: 40
+    }
+    .header__burger.active::before {
+        transform:rotate(45deg);
+        top: 16px;
+    }
+    .header__burger.active::after {
+        transform:rotate(-45deg);
+        top: 16px;
+    }
+    .header__burger.active span {
+        transform: scale(0);
+        top: 16px;
+    }
+    .header__burger::before,
+    .header__burger::after{
+        content: '';
+        background-color: #4C5866;
+        position: absolute;
+        width: 22px;
+        height: 2px;
+        left: 0;
+        transition: all 0.3s ease 0s;
+    }
+    .header__burger::before{
+        top: 6px;
+    }
+    .header__burger::after{
+        bottom: 5px;
+    }
+    .header__burger span{
+        position: absolute;
+        background-color: #4C5866;
+        left: 0;
+        width: 22px;
+        height: 2px;
+        top: 14px;
+        transition: all 0.3s ease 0s;
     }
     .navigation__list{
-        display: none;
+        position: fixed;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transition: all 0.3s ease 0s;
+        background-color: rgb(235, 235, 235);
+        padding: 130px 30px 0px 30px;
+        display: block;
+    }
+    .navigation__list.active{
+        top: 0;
+    }
+    .navigation__link{
+        width: 100%;
+        display: block;
+        margin-bottom: 50px;
     }
     .navigation__buttons{
         display: none;
     }
     .header-buttons{
-        display: block;
+        display: flex;
+        justify-content: space-between;
     }
     .footer-logo{
         display: none;
